Add google fonts to and removed default margins, padding and borders

--- a/contact.html
+++ b/contact.html
@@ -18,16 +18,17 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <header>Heading Goes Here</header>
-    <section>
-        Main image
-    </section>
-    <section>
-        Ethos of the Company
-    </section>
-    <section>
-        Bookings for classes and meet ups
-    </section>
-
+    <header>
+        <h1> <a href="index.html">Radical Transformation Yoga</a>
+        </h1>
+     </header>
+     <section>
+      Contact information and contact form
+     </section>
+    
+ 
+     <footer>
+         social media tags
+     </footer>
 </body>
 </html>
