--- a/gallery.html
+++ b/gallery.html
@@ -18,5 +18,17 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <header>
+        <h1> <a href="index.html">Radical Transformation Yoga</a>
+        </h1>
+     </header>
+     <section>
+         Images and videos of yoga
+     </section>
+  
+ 
+     <footer>
+         social media tags
+     </footer>
 </body>
 </html>
