--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Yoga</h1>
-    <header>Heading Goes Here</header>
+   
+    <header>
+       <h1> <a href="index.html">Radical Transformation Yoga</a>
+       </h1>
+    </header>
     <section>
         Main image
     </section>
