add style for heading and logos

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,10 @@
     <title>Contact</title>
 </head>
 <body>
+    <header>
+        <h1 id="logo"> <a href="index.html">Radical Transformation Yoga</a>
+        </h1>
+     </header>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -18,10 +22,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <header>
-        <h1> <a href="index.html">Radical Transformation Yoga</a>
-        </h1>
-     </header>
+  
      <section>
       Contact information and contact form
      </section>
