--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <title>Radical Transformation Yoga</title>
 </head>
 <body>
+    <header>
+        <h1 id="logo"> <a href="index.html">Radical Transformation Yoga</a>
+        </h1>
+     </header>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -20,10 +24,7 @@
         </ul>
     </nav>
    
-    <header>
-       <h1> <a href="index.html">Radical Transformation Yoga</a>
-       </h1>
-    </header>
+    
     <section>
         Main image
     </section>
