--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
         <h1 id="logo"> <a href="index.html">Radical Transformation Yoga</a>
         </h1>
      </header>
-    <nav>
+     <nav id="menu">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
   
