--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <h1 id="logo"> <a href="index.html">Radical Transformation Yoga</a>
         </h1>
      </header>
-    <nav>
+    <nav id="menu">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="index.html">Home</a></li>
+           
+          
         </ul>
     </nav>
    
