Added right & left content and structure

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <link rel="stylesheet" href="assests/css/style.css">
 
-    <title>Radical Transformation Yoga</title>
+    <title>Transformative Yoga</title>
 </head>
 <body>
     <header>
-        <h1 id="logo"> <a href="index.html">Radical Transformation Yoga</a>
+        <h1 id="logo"> <a href="index.html">Transformative Yoga</a>
         </h1>
      </header>
     <nav id="menu">
@@ -37,11 +37,50 @@
         </div>
     </section>
        
-    <section id="yoga-classes">
+    <section id="yoga-ethos">
         <h1>Yoga classes</h1>
-        <div id="left">left</div>
-        <div id="right">right</div>
-        <div id="middle">middle</div> 
+        <div id="left">
+            <div class="left-heading">
+                <h2>Why Do yoga?</h2>
+                <hr>
+                <p>Yoga's incorporation of meditation and breathing can help improve a person's mental well-being. “Regular yoga practice creates mental clarity and calmness; increases body awareness; relieves chronic stress patterns; relaxes the mind; centers attention; and sharpens concentration,” says Dr. Nevins.</p>
+                    <hr>
+            </div>
+
+            <div class="left-heading">
+                <h2>5 Benefits of Yoga</h2>
+                <hr>
+                <p>
+                    Improve flexibility and strength. Yoga stretches your muscles.<br />
+                    Stand up straighter. Many poses in yoga can strengthen the core muscles in your stomach and back.<br />
+                    Ease stress and anxiety levels. Yoga involves breathing exercises that force you to pay attention to your breath.<br />
+                    Reduce low back pain.<br />
+                    Improve sleep.<br />
+                </p>
+            </div>
+        </div>
+
+        <div id="right">
+            <div class="right-heading">
+                <h2>What happens to your body when you start doing yoga?</h2>
+                <hr>
+                <p>Practicing yoga can lower your blood pressure and reduce your risk of heart disease. It can also lower your cholesterol. ... The deep breathing and mental focus of yoga can decrease your stress. Yoga can also lower your blood glucose levels, making it healthy for lifestyle intervention
+                </p>
+            </div>
+            <div class="right-heading">
+                <h2>Is 20 minutes of yoga a day enough?</h2>
+                <hr>
+                <p>Another study of over 700 people found that practising just 12 minutes of yoga poses either daily or every other day improved their bone health. And another small scale study found that 20 mins of yoga improved focus and working memory.
+                </p>
+            </div>
+        </div>
+
+        <div id="middle">
+            <div>
+                <a href="assests/images/pose.png"></a>
+            </div>
+        </div> 
+        
     </section>
     <section>
         Bookings for classes and meet ups
