--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1 id="logo"> <a href="index.html">Radical Transformation Yoga</a>
+        <h1 id="logo"> <a href="index.html">Transformative Yoga</a>
         </h1>
      </header>
      <nav id="menu">
