added style, structure and content to middle div

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
        
     <section id="yoga-ethos">
-        <h1>Yoga classes</h1>
+        <h2 id="welcome">Yoga Power!</h2>
         <div id="left">
             <div class="left-heading">
                 <h2>Why Do yoga?</h2>
@@ -76,8 +76,8 @@
         </div>
 
         <div id="middle">
-            <div>
-                <a href="assests/images/pose.png"></a>
+            <div id="container">
+                <div id="circle-bg"></div>
             </div>
         </div> 
         
