Add class times and content

--- a/index.html
+++ b/index.html
@@ -83,7 +83,27 @@
         
     </section>
     <section>
-        Bookings for classes and meet ups
+       <div>
+           <h2>Intro To Yoga</h2>
+           <h3>4-Week Course: €60</h3>
+           <h3>4-Week Course plus 3 weeks unlimited yoga: €95.</h3>
+           <h3>We run a new Intro To Yoga course every four weeks.</h3>
+           <h3>Click to Sign Up!</h3>
+       </div>
+       <div>
+        <h2>Pregnancy Yoga Course</h2>
+        <h3>Courses running every 6 weeks</h3>
+        <h3>Courses running every 6 weeks</h3>
+        <h3>Qualified at the most experienced level of yoga RYT500</h3>
+        <h3>Click to Sign Up!</h3>
+    </div>
+    <div>
+        <h2>Mindfulness Meditation</h2>
+        <h3>4-Week Course</h3>
+        <h3>create a calmer, healthier you..</h3>
+        <h3>€85 for four-week course</h3>
+        <h3>Click to Sign Up!</h3>
+    </div>
     </section>
 
     <footer>
