Fixed divs on home screen  with grid method

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </section>
     <section id="yoga-ethos">
         <h2 id="welcome">Yoga Power!</h2>
-        <section class="first-container">
-                <div>
+        <section id="first">
+                <div class="grid-container">
                             <div class="heading-one">
                                  <h2>Why Do yoga?</h2>
                                     <br />
@@ -65,7 +65,41 @@
                             </div>                   
                 </div>
         </section>
-
+        <hr width="3px" color="#3a3a3a" >
+        <section>
+            <div class="grid-container">
+                <div class="image-two">
+                    <div id="container-2">
+                        <div id="circle-2"></div>
+                    </div>
+                </div>           
+                <div class="heading-two">
+                    <h2>What is yoga?</h2>
+                    <br />
+                    <p>Yoga is an ancient form of exercise that focuses on strength, flexibility and breathing to boost physical and mental wellbeing. 
+                        The main components of yoga are postures (a series of movements designed to increase strength and flexibility) and breathing.
+                        The practice originated in India about 5,000 years ago and has been adapted in other countries in a variety of ways.
+                         Yoga is now commonplace in leisure centres, health clubs, schools, hospitals and surgeries.
+                    </p>
+                    <br />
+                    <p>
+                        The origins of yoga are shrouded in the mists of time. The ancient wisdom known as "the supreme science of life" is believed to 
+                        have been revealed to the great sages of India several thousand years ago.
+                    </p>
+                    <br />
+                    <p>
+                             
+                        Yoga is an ancient system of physical and mental practices that originated during the Indus Valley civilization in South Asia. 
+                        The fundamental purpose of yoga is to foster harmony in the body, mind, and environment.
+                    </p>
+                    <br />
+                    <p>      
+                        Yoga professes a complete system of physical, mental, social, and spiritual development. For generations, this philosophy was passed 
+                        on from the master teacher to the student. The first written records of the practice of yoga appeared around 200 BC in Yogasutra of Patanjali. The system consisted of the eightfold path or Asthangayoga.
+                    </p>
+                </div>
+            </div>   
+        </section>
     <footer>
         
     </footer>
