--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="radical transformation yoga, ireland">
     <meta name="keywords" content="yoga, breathe work, ireland, transformation">
     <link rel="stylesheet" href="assests/css/style.css">
+    <link rel="icon" href="assests/images/favicon.ico">
     <title>Transformative Yoga</title>
 </head>
 <body>
@@ -65,8 +66,8 @@
                             </div>                   
                 </div>
         </section>
-        <hr width="3px" color="#3a3a3a" >
-        <section>
+        <hr width="3px" color="#3a3a3a " >
+        <section id="second">
             <div class="grid-container">
                 <div class="image-two">
                     <div id="container-2">
@@ -98,9 +99,27 @@
                         on from the master teacher to the student. The first written records of the practice of yoga appeared around 200 BC in Yogasutra of Patanjali. The system consisted of the eightfold path or Asthangayoga.
                     </p>
                 </div>
-            </div>   
+            </div> 
+            <br />
+            <br />  
         </section>
-    <footer>
+        <section id="third">
+            <div class="grid-container">
+                <div class="video-one">
+                    <h3>5-Minute Morning Yoga - Yoga With Adriene</h3>
+                    <p>5 Min Morning Yoga With Adriene. Don't have a lot of time? Take 5 to promote healthy flow of energy so that you can do your best, be authentic and Find What Feels Good! </p>
+                    <br />
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4C-gxOE0j7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-two">
+                    <h3>12 Minute Core Conditioning - Yoga With Adriene</h3>
+                    <p>Two words, FLOOR CORE. Take 12 minutes to build connection to center while strengthening and toning your abdominal muscles. </p>
+                    <br />
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/8T39OBNaNzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+    <footer id="end">
         
     </footer>
 
