--- a/courses.html
+++ b/courses.html
@@ -18,7 +18,7 @@
      <nav id="menu">
         <ul>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="classes.html">Classes</a></li>
+            <li><a href="courses.html">Courses</a></li>
             <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
