Added a hr tag and styled it

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <div class="grid-container">
                             <div class="heading-one">
                                  <h2>Why Do yoga?</h2>
+                                 <hr>
                                     <br />
                                     <p>Yoga's incorporation of meditation and breathing can help improve a person's mental well-being. <br />
                                         “Regular yoga practice creates mental clarity and calmness; increases body awareness; relieves chronic stress patterns; <br />
@@ -87,6 +88,7 @@
 
                 <div class="heading-two">
                     <h2>What is yoga?</h2>
+                    <hr>
                     <br />
                     <p>Yoga is an ancient form of exercise that focuses on strength, flexibility and breathing to boost physical and mental wellbeing. 
                         The main components of yoga are postures (a series of movements designed to increase strength and flexibility) and breathing.
@@ -117,7 +119,9 @@
             <br />  
         </section>
         <section id="third">
-
+            <h2 id="teach">Instructors</h2>
+            <hr>
+            <br />
             <div class="grid-container-two">
                 
                 <div class="teach-text">
@@ -156,6 +160,9 @@
         </section>
 
         <section id="fourth">
+            <h2 id="teach"><strong>Try it out for yourself!</strong></h2>
+            <hr>
+            <br />
             <div class="grid-container">
                 <div class="video-one">
                     <h3>5-Minute Morning Yoga - Yoga With Adriene</h3>
