--- a/courses.html
+++ b/courses.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <header>
-        <h1 id="logo"> <a href="index.html">Transformative Yoga</a>
+        <h1> <a href="index.html" id="logo">Transformative Yoga</a>
         </h1>
      </header>
-     <nav id="menu">
+    <nav id="nav">
         <ul>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
         </ul>
     </nav>
     
