added flex box instead of grid

--- a/index.html
+++ b/index.html
@@ -45,17 +45,18 @@
     <section id="ethos">
         <h2 id="welcome" class="margin">Yoga Power!</h2>
        
-        <section id="second" class="margin">
+        <section class="margin">
 
-            <div class="grid-container">
+        <div clas="row">        
+            <div class="container" >
 
-                <div class="image-one">
+                <div class="box" class="col-1">
                     <div id="container-2">
                         <div id="circle-2"></div>
                     </div>
                 </div>   
 
-                <div class="heading-two">
+                <div  class="box" class="col-2">
                     <h2>What is yoga?</h2>
                     <hr>
                     <br />
@@ -82,37 +83,37 @@
                     </p>
                 </div>
             </div>    
-        </section>
-        <section id="first" class="margin">
-                <div class="grid-container">
-                            <div class="heading-one">
-                                 <h2>Why Do yoga?</h2>
-                                 <hr>
-                                    <br />
-                                    <p>Yoga's incorporation of meditation and breathing can help improve a person's mental well-being. <br />
-                                        “Regular yoga practice creates mental clarity and calmness; increases body awareness; relieves chronic stress patterns; <br />
-                                        relaxes the mind; centers attention; and sharpens concentration,” says Dr. Nevins.
-                                    </p>
-                                    <br />
-                                    <p>
-                                        If you’re a passionate yoga practitioner, you’ve probably noticed the benefits of yoga. Maybe you’re sleeping better or getting fewer colds or 
-                                        just feeling more relaxed and at ease. But if you’ve ever tried telling a newbie about the benefits of yoga, you might find that explanations like 
-                                        “It increases the flow of prana” or “It brings energy up your spine” fall on deaf or skeptical ears.
-                                    </p>
-                                    <br />
-                                    <p>
-                                        As it happens, Western science is starting to provide some concrete clues as to how yoga works to improve health, heal aches and pains, and keep sickness at bay.
-                                        Once you understand them, you’ll have even more motivation to step onto your mat, and you probably won’t feel so tongue-tied the next time someone wants Western proof.
-                                    </p>                                 
-                            </div>
-                            <div class="image">
-                                <div id="container-one">
-                                    <div id="circle-one">
-                                    </div>
+            </section>
+            <section id="first" class="margin">
+                    <div class="container">
+                                <div class="box" class="col-3">
+                                    <h2>Why Do yoga?</h2>
+                                    <hr>
+                                        <br />
+                                        <p>Yoga's incorporation of meditation and breathing can help improve a person's mental well-being. <br />
+                                            “Regular yoga practice creates mental clarity and calmness; increases body awareness; relieves chronic stress patterns; <br />
+                                            relaxes the mind; centers attention; and sharpens concentration,” says Dr. Nevins.
+                                        </p>
+                                        <br />
+                                        <p>
+                                            If you’re a passionate yoga practitioner, you’ve probably noticed the benefits of yoga. Maybe you’re sleeping better or getting fewer colds or 
+                                            just feeling more relaxed and at ease. But if you’ve ever tried telling a newbie about the benefits of yoga, you might find that explanations like 
+                                            “It increases the flow of prana” or “It brings energy up your spine” fall on deaf or skeptical ears.
+                                        </p>
+                                        <br />
+                                        <p>
+                                            As it happens, Western science is starting to provide some concrete clues as to how yoga works to improve health, heal aches and pains, and keep sickness at bay.
+                                            Once you understand them, you’ll have even more motivation to step onto your mat, and you probably won’t feel so tongue-tied the next time someone wants Western proof.
+                                        </p>                                 
                                 </div>
-                            </div>                   
-                </div>
-        </section>
+                                <div class="box" class="col-4">
+                                    <div id="container-one">
+                                        <div id="circle-one">
+                                        </div>
+                                    </div>
+                                </div>                   
+                    </div>
+            </section>
     </section>   
         
 
