added responsivness too the site for mobiles

--- a/courses.html
+++ b/courses.html
@@ -78,7 +78,7 @@
     <hr>
    <br />
     <div class="grid-container">
-        <div class="video-one">
+        <div class="video">
             <h3>5-Minute Morning Yoga - Yoga With Adriene</h3>
             <br />
            
@@ -86,7 +86,7 @@
             <p>5 Min Morning Yoga With Adriene. Don't have a lot of time? Take 5 to promote healthy flow of energy so that you can do your best, be authentic and Find What Feels Good! </p>
         </div>
 
-        <div class="video-two">
+        <div class="video">
             <h3>12 Minute Core Conditioning - Yoga With Adriene</h3>
             <br />
            
