added to the readme file, bugs & instructor page

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="yoga, breathe work, ireland, transformation">
     <link rel="stylesheet" href="assests/css/style.css">
     <link rel="icon" href="assests/images/favicon.ico">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
 
     <title>Transformative Yoga</title>
 </head>
