added pictures to courses page

--- a/courses.html
+++ b/courses.html
@@ -53,7 +53,8 @@
                                 <hr>
                                 <h3>4-Week Course: €60</h3>
                                 <h3>4-Week Course plus 3 weeks unlimited yoga: €95.</h3>
-                                <h3>We run a new Intro To Yoga course every four weeks.</h3>
+                                <h3>We run a new Intro To Yoga course every four weeks.</h3>                               
+                                <img src="assests/images/intro-use.png" alt="Intro" class="courses">
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                         </div>
                         <div class="box-one">
@@ -61,7 +62,8 @@
                             <hr>
                             <h3>Courses running every 6 weeks</h3>
                             <h3>Courses running every 6 weeks</h3>
-                            <h3>Qualified at the most experienced level of yoga RYT500</h3>
+                            <h3>Qualified at the most experienced level of yoga RYT500</h3>                           
+                            <img src="assests/images/preg.jpg" alt="Pregnancy" class="courses">
                             <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                         </div>
                         <div class="box-two">
@@ -69,16 +71,20 @@
                             <hr>
                             <h3>4-Week Course</h3>
                             <h3>create a calmer, healthier you..</h3>
-                            <h3>€85 for four-week course</h3>
+                            <h3>€85 for four-week course</h3>                           
+                            <img src="assests/images/meditation2.jpg" alt="Meditation" class="courses">
                             <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+
                         </div>
                         <div class="box-one">
                             <h2>Advanced Education</h2>
                             <hr>
                             <h3>Thursday 13th- Saturday 15th May 2021 10-5pm</h3>
                             <h3> continuing education for teachers and advanced students</h3>
-                            <h3>In-Studio: €290. Online: €285</h3>
+                            <h3>In-Studio: €290. Online: €285</h3>                           
+                            <img src="assests/images/yogateachertraining.jpg" alt="Teacher-Training" class="courses">
                             <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+
                         </div>
             </div>
 </section>
