added a contact form to contact page

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,35 @@
         </div>
     </section>
     <hr>
+<section>
+    <h3>Contact Form</h3>
+
+<div class="container">
+  <form action="/action_page.php">
+    <label for="firstName">First Name</label>
+    <input type="text" id="firstName" name="firstName" placeholder="Please enter your name..">
+
+    <label for="lastName">Last Name</label>
+    <input type="text" id="lastName" name="lastName" placeholder="Please enter your last name..">
+
+    <label for="contacting">contacting us in regards to?</label>
+    <select id="contacting" name="contacting">
+      <option value="introduction-classes">Introduction Classes</option>
+      <option value="pregnancy-yoga">Pregnancy Yoga</option>
+      <option value="meditation-classes">Meditation Classes</option>
+      <option value="teacher-training-classes">Teacher Training Classes</option>
+      <option value="general-enquiry">General Enquiry</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Enter your comments here for contacting us....." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</div>
+
+</section>
+
     <footer class="footer">
         <hr>
            
