--- a/courses.html
+++ b/courses.html
@@ -47,8 +47,9 @@
     <section>
         <h2 id="welcome" class="margin">Courses</h2>
         <hr>
-            <div class="grid-container">
-                        <div class="box-two">
+            <div class="grid-container" >
+                        <div class="box-two" aria-labelledby="yoga-introduction">
+                            <div id="yoga-introduction">
                                 <h2>Intro To Yoga</h2>
                                 <hr>
                                 <p>4-Week Course: €60</p>
@@ -56,35 +57,40 @@
                                 <p>We run a new Intro To Yoga course every four weeks.</p>                               
                                 <img src="assests/images/intro-use.png" alt="Intro" class="courses">
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+                            </div>
                         </div>
-                        <div class="box-one">
-                            <h2>Pregnancy Yoga Course</h2>
-                            <hr>
-                            <p>Courses running every 6 weeks</p>
-                            <p>Courses running every 6 weeks</p>
-                            <p>Qualified at the most experienced level of yoga RYT500</p>                           
-                            <img src="assests/images/preg.jpg" alt="Pregnancy" class="courses">
-                            <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+                        <div class="box-one" aria-labelledby="pregnancy-yoga">
+                            <div id="pregnancy-yoga">
+                                <h2>Pregnancy Yoga Course</h2>
+                                <hr>
+                                <p>Courses running every 6 weeks</p>
+                                <p>Courses running every 6 weeks</p>
+                                <p>Qualified at the most experienced level of yoga RYT500</p>                           
+                                <img src="assests/images/preg.jpg" alt="Pregnancy" class="courses">
+                                <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+                            </div>        
                         </div>
-                        <div class="box-two">
-                            <h2>Mindfulness Meditation</h2>
-                            <hr>
-                            <p]>4-Week Course</p>
-                            <p>Create a calmer, healthier you.</p>
-                            <p>€85 for four-week course</p>                           
-                            <img src="assests/images/meditation2.jpg" alt="Meditation" class="courses">
-                            <a href="contact.html"><h4>Click to Sign Up!</p></a>
-
+                        <div class="box-two" aria-labelledby="meditation">
+                            <div id="meditation">
+                                <h2>Mindfulness Meditation</h2>
+                                <hr>
+                                <p]>4-Week Course</p>
+                                <p>Create a calmer, healthier you.</p>
+                                <p>€85 for four-week course</p>                           
+                                <img src="assests/images/meditation2.jpg" alt="Meditation" class="courses">
+                                <a href="contact.html"><h4>Click to Sign Up!</p></a>
+                            </div>        
                         </div>
-                        <div class="box-one">
-                            <h2>Advanced Education</h2>
-                            <hr>
-                            <p>Thursday 13th- Saturday 15th May 2021 10-5pm</p>
-                            <p> continuing education for teachers and advanced students</p>
-                            <p>In-Studio: €290. Online: €285</p>                           
-                            <img src="assests/images/yogateachertraining.jpg" alt="Teacher-Training" class="courses">
-                            <a href="contact.html"><h4>Click to Sign Up!</h4></a>
-
+                        <div class="box-one" aria-labelledby="teacher-training">
+                            <div id="teacher-training">
+                                <h2>Advanced Education</h2>
+                                <hr>
+                                <p>Thursday 13th- Saturday 15th May 2021 10-5pm</p>
+                                <p> continuing education for teachers and advanced students</p>
+                                <p>In-Studio: €290. Online: €285</p>                           
+                                <img src="assests/images/yogateachertraining.jpg" alt="Teacher-Training" class="courses">
+                                <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+                            </div>
                         </div>
             </div>
 </section>
