added map and style to contact page

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="radical transformation yoga, ireland">
     <meta name="keywords" content="yoga, breathe work, ireland, transformation">
-    <link rel="stylesheet" href="assests/css/style.css">
-    <link rel="icon" href="assests/images/favicon.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
 
     <title>Transformative Yoga</title>
@@ -32,44 +32,47 @@
 </header>
 <hr>
     <section id="hero-outer">
-       <div id="hero"></div>
+       <div id="hero-rest"></div>
 
-       <div id="cover-text">
-            <h3>Restore &</h3> 
-            <h3>Revitalize</h3>
-            <br />
-            <h4>Online</h4>
-            <h4>One-to-One</h4>
-            <h4>Group Classes</h4>
-        </div>
+    <div id="cover-text">
+        <h3>Restore & Revitalize</h3> 
+    </div>
     </section>
     <hr>
 <section>
-    <h2 id="contact-heading">Contact Form</h2>
+    <h2 id="welcome" class="margin">Contact us or come find us</h2>
+    <hr>
+    <div class="grid-container">
+        
+        <div class="contact-container">
+            <form action="/action_page.php">
+                <label for="firstName">First Name</label>
+                <input type="text" id="firstName" name="firstName" placeholder="Please enter your name..">
 
-<div class="contact-container">
-  <form action="/action_page.php">
-    <label for="firstName">First Name</label>
-    <input type="text" id="firstName" name="firstName" placeholder="Please enter your name..">
+                <label for="lastName">Last Name</label>
+                <input type="text" id="lastName" name="lastName" placeholder="Please enter your last name..">
 
-    <label for="lastName">Last Name</label>
-    <input type="text" id="lastName" name="lastName" placeholder="Please enter your last name..">
+                <label for="contacting">Contacting us in regards to?</label>
+                <select id="contacting" name="contacting">
+                    <option value="introduction-classes">Introduction Classes</option>
+                    <option value="pregnancy-yoga">Pregnancy Yoga</option>
+                    <option value="meditation-classes">Meditation Classes</option>
+                    <option value="teacher-training-classes">Teacher Training Classes</option>
+                    <option value="general-enquiry">General Enquiry</option>
+                </select>
 
-    <label for="contacting">Contacting us in regards to?</label>
-    <select id="contacting" name="contacting">
-      <option value="introduction-classes">Introduction Classes</option>
-      <option value="pregnancy-yoga">Pregnancy Yoga</option>
-      <option value="meditation-classes">Meditation Classes</option>
-      <option value="teacher-training-classes">Teacher Training Classes</option>
-      <option value="general-enquiry">General Enquiry</option>
-    </select>
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Enter your comments here for contacting us....." style="height:200px"></textarea>
 
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Enter your comments here for contacting us....." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-  </form>
-</div>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <div>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.3408981544208!2d-9.038801684025193!3d53.283428187123086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96c11fca891b%3A0xb824d745fb86e53e!2sBikram%20HOT%20YOGA%20Galway!5e0!3m2!1sen!2sie!4v1625046615885!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <p>Due to Covid-19 our studios are currently closed under the governments guidelines</p>
+            </div>
+    </div>    
 <br />
 </section>
 
