--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="radical transformation yoga, ireland">
     <meta name="keywords" content="yoga, breathe work, ireland, transformation">
-    <link rel="stylesheet" href="assests/css/style.css">
-    <link rel="icon" href="assests/images/favicon.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
     <title>Transformative Yoga</title>
 </head>
@@ -20,7 +20,7 @@
            
                 <nav id="nav">
                     
-                    <a href="index.html" class="active" aria-label="Go to top of the page">Home</a>                      
+                    <a href="index.html" aria-label="Go to top of the page">Home</a>                      
                     <a href="courses.html" aria-label="Go to the courses page">Courses</a>
                     <a href="instructors.html" aria-label="Go to the instructors page">Instructors</a>
                     <a href="contact.html" aria-label="Go to the contact or sign up page">Contact</a>
@@ -33,12 +33,7 @@
        <div id="hero"></div>
 
        <div id="cover-text">
-            <h3>Restore &</h3> 
-            <h3>Revitalize</h3>
-            <br />
-            <h4>Online</h4>
-            <h4>One-to-One</h4>
-            <h4>Group Classes</h4>
+            <h3>Restore & Revitalize</h3> 
         </div>
     </section>
      <hr>
