--- a/courses.html
+++ b/courses.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="radical transformation yoga, ireland">
     <meta name="keywords" content="yoga, breathe work, ireland, transformation">
-    <link rel="stylesheet" href="assests/css/style.css">
-    <link rel="icon" href="assests/images/favicon.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
 
     <title>Transformative Yoga</title>
@@ -32,16 +32,11 @@
 </header>
 <hr>
     <section id="hero-outer">
-       <div id="hero"></div>
+       <div id="hero-rest"></div>
 
        <div id="cover-text">
-            <h3>Restore &</h3> 
-            <h3>Revitalize</h3>
-            <br />
-            <h4>Online</h4>
-            <h4>One-to-One</h4>
-            <h4>Group Classes</h4>
-        </div>
+        <h3>Restore & Revitalize</h3> 
+    </div>
     </section>
     <hr>
     <section>
@@ -52,10 +47,11 @@
                             <div id="yoga-introduction">
                                 <h2>Intro To Yoga</h2>
                                 <hr>
+                               
                                 <p>4-Week Course: €60</p>
                                 <p>4-Week Course plus 3 weeks unlimited yoga: €95.</p>
                                 <p>We run a new Intro To Yoga course every four weeks.</p>                               
-                                <img src="assests/images/intro-use.png" alt="Intro" class="courses">
+                                <img src="assets/images/intro-use.png" alt="Intro" class="courses">
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>
                         </div>
@@ -66,7 +62,7 @@
                                 <p>Courses running every 6 weeks</p>
                                 <p>Courses running every 6 weeks</p>
                                 <p>Qualified at the most experienced level of yoga RYT500</p>                           
-                                <img src="assests/images/preg.jpg" alt="Pregnancy" class="courses">
+                                <img src="assets/images/preg.jpg" alt="Pregnancy" class="courses">
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>        
                         </div>
@@ -77,7 +73,7 @@
                                 <p]>4-Week Course</p>
                                 <p>Create a calmer, healthier you.</p>
                                 <p>€85 for four-week course</p>                           
-                                <img src="assests/images/meditation2.jpg" alt="Meditation" class="courses">
+                                <img src="assets/images/meditation2.jpg" alt="Meditation" class="courses">
                                 <a href="contact.html"><h4>Click to Sign Up!</p></a>
                             </div>        
                         </div>
@@ -88,7 +84,7 @@
                                 <p>Thursday 13th- Saturday 15th May 2021 10-5pm</p>
                                 <p> continuing education for teachers and advanced students</p>
                                 <p>In-Studio: €290. Online: €285</p>                           
-                                <img src="assests/images/yogateachertraining.jpg" alt="Teacher-Training" class="courses">
+                                <img src="assets/images/yogateachertraining.jpg" alt="Teacher-Training" class="courses">
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>
                         </div>
