fixed code that W3 found

--- a/courses.html
+++ b/courses.html
@@ -70,11 +70,11 @@
                             <div id="meditation">
                                 <h2>Mindfulness Meditation</h2>
                                 <hr>
-                                <p]>4-Week Course</p>
+                                <p>4-Week Course</p>
                                 <p>Create a calmer, healthier you.</p>
                                 <p>€85 for four-week course</p>                           
                                 <img src="assets/images/meditation2.jpg" alt="Meditation" class="courses">
-                                <a href="contact.html"><h4>Click to Sign Up!</p></a>
+                                <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>        
                         </div>
                         <div class="box-one" aria-labelledby="teacher-training">
