--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>   
 
-                            <div  class="box-one" id=""yoga-description"">
+                            <div  class="box-one" id="yoga-description">
                                 <h2>What is yoga?</h2>
                                 <hr>
                                 <br />
