--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,8 @@
         
         <div class="contact-container" aria-labelledby="contact-form">
             <form id="contact-form">
-                <label for="firstName">First Name</label>
-                <input type="text" id="firstName" name="firstName" placeholder="Please enter your first name.">
-                <label for="lastName">Last Name</label>
-                <input type="text" id="lastName" name="lastName" placeholder="Please enter your last name.">
+                <label for="fullName">Name</label>
+                <input type="text" id="fullName" name="fullName" placeholder="Please enter your full name.">
                 <label for="email">Email</label>
                 <input type="email" id="eMail" name="eMail" placeholder="Please enter your email">
                 <label for="mobile">Mobile</label>
