--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="radical transformation yoga, ireland">
     <meta name="keywords" content="yoga, breathe work, ireland, transformation">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">    
     <link rel="icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Transformative Yoga</title>
 </head>
 <body>
@@ -42,9 +42,9 @@
      <!--Title on PAge under hero image-->
     <h2 id="welcome" class="margin">Contact us or come find us</h2>
     <hr>
-    <div class="grid-container">
+    <div class="container">
         <!--contact form-->
-        <div class="contact-container" aria-labelledby="contact-form">
+        <div class="col-md-6 contact-container" aria-labelledby="contact-form">
             <form id="contact-form">
                 <label for="fullName">Name</label>
                 <input type="text" id="fullName" name="fullName" placeholder="Please enter your full name.">
@@ -67,8 +67,9 @@
         </div>
             <!--Google Maps for studio location, just picked a random yoga studio for refrence. I took the map from google maps and copied the embeded code and aded it to the grid container-->
         <div>
-            <div class="map-container" aria-labelledby="find-us">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.3408981544208!2d-9.038801684025193!3d53.283428187123086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96c11fca891b%3A0xb824d745fb86e53e!2sBikram%20HOT%20YOGA%20Galway!5e0!3m2!1sen!2sie!4v1625046615885!5m2!1sen!2sie" width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy" id="find-us"></iframe>
+            <div class="col-md-6 map-container" aria-labelledby="find-us">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.3408981544208!2d-9.038801684025193!3d53.283428187123086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96c11fca891b%3A0xb824d745fb86e53e!2sBikram%20HOT%20YOGA%20Galway!5e0!3m2!1sen!2sie!4v1625046615885!5m2!1sen!2sie" width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy" id="find-us"></iframe>
+                <br />
                 <strong>Due to Covid-19 our studios are currently closed.</strong>
             </div>
         </div> 
