--- a/instructors.html
+++ b/instructors.html
@@ -6,14 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="radical transformation yoga, ireland">
     <meta name="keywords" content="yoga, breathe work, ireland, transformation">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">    
     <link rel="icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Transformative Yoga</title>
 </head>
 <body>
@@ -33,7 +29,8 @@
         </nav>
    
 </header>
-<hr>    <!--Hero image-->
+<hr>    
+<!--Hero image-->
 <section id="hero-outer">
 <div id="hero"></div>
 
@@ -53,7 +50,7 @@
     <div class = "container-fluid">       
             <div class="row">
   
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-md-4 col-sm-6 pad">
                             <!--Image of instructor-->
                             <img src="assets/images/lisayoga1.png" alt="ciara-teacher" aria-labelledby="ciara-yoga-instructor">
                         </div>
