Added comments to header and bootstrap elements

--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META Data-->
     <meta name="description" content="radical transformation yoga, ireland">
     <meta name="keywords" content="yoga, breathe work, ireland, transformation">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">    
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>  
+    <!--browser icon-->   
     <link rel="icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
+    <!--Style sheet CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Logo Top Left-->
     <title>Transformative Yoga</title>
 </head>
 <body>
