fixed all headers in all pages to be the same

--- a/instructors.html
+++ b/instructors.html
@@ -48,10 +48,9 @@
 
 </section>
     <hr>
-        <section id="third" class="margin">
+        <section>
             <!--Title on PAge under hero image-->
-            <h2 id="teach">Instructors</h2>
-
+            <h2 id="welcome" class="margin">Instructors</h2>
             <hr>
            <br />
     <div class = "container-fluid">       
