--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </p>
                                 <br />
                             </div>
-            </div>>
+            </div>
             <div class="row">    
                
                                 <div  class="col-sm-8 box-two" id="yoga-description">
